# StudyMate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 06650625fb97_add_telegram_links_and_telegram_link_.py  066f42dbed80_add_fts_tsvector_gin_index_to_document_.py  19324f4f8f37_add_document_chunks_table.py  3441b9fb9f25_add_org_id_to_subjects.py  35c81d01e21d_add_summary_column_to_documents.py  4220579b8fb6_swap_documents_raw_content_for_r2_.py  4885e5ab676c_add_language_column_to_documents.py  48c8dee79a2c_add_user_plans_and_generation_usage_.py  5ccf38a52dfb_add_flashcard_review_states_table.py  5ffe4bd447ff_add_quizzes_and_quiz_questions_tables.py  6c9f0c767feb_add_org_plans_table_plan_team_phase_5_.py  74f229e49637_add_subjects_table.py  7877073ae76d_add_raw_content_to_documents.py  a1b2c3d4e5f6_add_assignment_submissions_table.py  a3a3277e047c_add_documents_table.py  b27704cd2174_add_flashcards_table.py  b2c3d4e5f6a7_add_quiz_attempts_table.py  b31b86c196ef_add_embedding_column_to_document_chunks.py  ba1acb6a4b7c_add_subject_id_to_document_chunks.py  c1d2e3f4a5b6_add_active_subject_id_to_telegram_links.py  e30f18904b8f_add_referral_tables.py  ee395363541a_add_conversations_and_conversation_.py  faccee6a0508_add_assignments_table.py  fb44afd7a3d6_enable_pgvector_extension.py
backend/api/: index.py
backend/app/: main.py
backend/app/core/: auth.py  clerk_api.py  config.py  db.py  inngest_client.py  org.py  polar_client.py  r2_client.py  sentry.py
backend/app/modules/ask/: llm.py  models.py  router.py  schemas.py  service.py
backend/app/modules/assignments/: models.py  router.py  schemas.py  service.py
backend/app/modules/billing/: models.py  router.py  schemas.py  service.py
backend/app/modules/documents/: chunking.py  embedding.py  jobs.py  models.py  ocr.py  parsing.py  rerank.py  router.py  rrf.py  schemas.py  service.py  summarization.py
backend/app/modules/flashcards/: generation.py  models.py  router.py  schemas.py  service.py  sm2.py
backend/app/modules/progress/: router.py  schemas.py  service.py
backend/app/modules/quiz/: generation.py  models.py  router.py  schemas.py  service.py
backend/app/modules/referral/: models.py  router.py  schemas.py  service.py
backend/app/modules/research/: __init__.py  agent.py  router.py  schemas.py  service.py  tavily.py
backend/app/modules/subjects/: models.py  router.py  schemas.py  service.py
backend/app/modules/telegram/: models.py  router.py  schemas.py  service.py  telegram_api.py
backend/app/shared/: datetime.py  language.py
backend/scripts/: precommit_check.py
backend/tests/: conftest.py  test_ask.py  test_assignment_roster.py  test_assignments.py  test_auth.py  test_billing.py  test_chunking.py  test_clerk_api.py  test_cors.py  test_db.py  test_documents.py  test_embedding.py  test_flashcard_generation.py  test_flashcards.py  test_health.py  test_inngest.py  test_language.py  test_llm.py  test_ocr.py  test_org_flashcards.py  test_org_quizzes.py  test_org_subjects.py  test_parsing.py  test_polar.py  test_progress.py  test_quiz.py  test_quiz_attempts.py  test_quiz_delete_cascade.py  test_quiz_generation.py  test_r2_client.py  test_referral.py  test_rerank.py  test_research.py  test_research_agent.py  test_research_tavily.py  test_roster_diff.py  test_rrf.py  test_search.py  test_sentry.py  test_sm2.py  (+4 more)
docs/: DECISIONS.md  DEPLOYMENT.md  FRONTEND.md  FUTURE.md  PROGRESS.md  RELEASE_CHECKLIST.md  WORKLOG.md  plan.md
docs/design/: studymate-design-prompt.md
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  vitest.setup.ts
frontend/messages/: README.md  en.json  ko.json  ru.json  uz.json
frontend/src/: instrumentation-client.ts  instrumentation.ts  middleware.ts
(+171 files in other folders)
