[project]
name = "studymate-backend"
version = "0.1.0"
requires-python = ">=3.12"

# --- Vercel deploy (see docs/DEPLOYMENT.md) ---
# Pins the single Python-runtime entrypoint so Vercel uses exactly `api/index.py`'s
# re-exported FastAPI `app` (avoids any ambiguity with other auto-detected entrypoints
# like `app/main.py`). Ignored entirely by local tooling / `uvicorn app.main:app`.
[tool.vercel]
entrypoint = "api.index:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Default run is offline: tests marked `live` (real Neon/Cohere) are deselected unless
# explicitly requested with `pytest -m live`.
addopts = "-m 'not live'"
markers = ["live: hits real Neon/Cohere, opt-in"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's `Depends(...)`/`File(...)`/etc. default-argument pattern is safe (not a
# mutable default) — tell bugbear so it stops flagging B008 on every dependency.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Query", "fastapi.Body"]
